--- a/WebComicXKCD/Views/Home/Index.cshtml
+++ b/WebComicXKCD/Views/Home/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <div class="container">
-    
+
     <h2>@Model.Result.title</h2>
-    <img src="@Model.Result.img" alt="@Model.Result.alt"/>
+    <img src="@Model.Result.img" alt="@Model.Result.alt" />
     <p>@Model.Result.alt</p>
-   
-        <a class="btn btn-link">Previous</a>
-   
+
+    <a asp-route-id="@Model.Result.PrevPage" asp-controller="WebComic" class="btn btn-link">Previous</a>
+
 </div>
